# acp-agent-workbench

./: README.md  TODO.md  components.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
docs/: backend-architecture.md  follow-up-prompt-plan.md  frontend-fsd.md  frontend-tests.md  multi-agent-tabs-plan.md  multi-window-plan.md  sqlite-wal-storage-plan.md  workspace-plan.md  workspace-run-state-model.md  worktree-isolation.md
scripts/: check-backend-boundaries.mjs  check-fsd-boundaries.mjs  tauri-dev.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapters/: acp_session_store_sqlite.rs  agent_catalog.rs  beads.rs  fs.rs  git.rs  github.rs  mod.rs  session_registry.rs  sqlite.rs  storage_state.rs  workspace_store.rs  workspace_store_sqlite.rs
src-tauri/src/adapters/acp/: client.rs  mod.rs  runner.rs  session_update_mapper.rs
src-tauri/src/adapters/tauri/: commands.rs  event_sink.rs  mod.rs  session_state.rs
src-tauri/src/application/: cancel_agent_run.rs  errors.rs  list_local_tasks.rs  mod.rs  resolve_workdir.rs  run_agent.rs  send_prompt.rs  start_agent_run.rs  workspace_git.rs  workspace_worktree.rs
src-tauri/src/domain/: acp_session.rs  events.rs  git.rs  local_task.rs  mod.rs  run.rs  workbench_window.rs  workspace.rs  workspace_git.rs
src-tauri/src/ports/: acp_session_store.rs  git_repository.rs  github_pull_request.rs  local_task_source.rs  mod.rs  permission.rs  runner.rs  session_handle.rs  session_registry.rs  workspace_git.rs  workspace_store.rs
(+49 files in other folders)
